Remove java7 base64 dependency